[package]
name = "grpcio"
version = "0.1.0"
authors = ["CeresDB Authors <ceresdbservice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Rename to workaround doctest bug
# See: https://github.com/rust-lang/cargo/issues/6819

[target.'cfg(target_os = "macos")'.dependencies]
upstream = { version = "0.9.1", package = "grpcio" }

[target.'cfg(target_os = "linux")'.dependencies]
upstream = { version = "0.9.1", package = "grpcio", features = ["openssl"] }
