# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "horaectl"

[package.license]
workspace = true

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
once_cell = "1.19.0"
package = "0.0.0"
prettytable = "0.10.0"
reqwest = {version = "0.11.24", features = ["json"]}
serde = { version = "1.0.196", features = ["derive"] }
shell-words = "1.1.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }