[package]
name = "ceresdb-test"
version = "0.1.0"

[package.edition]
workspace = true

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1"
ceresdb-client-rs = { git = "https://github.com/CeresDB/ceresdb-client-rs.git", rev = "69948b9963597ccdb7c73756473393972dfdebd3" }
sqlness = "0.3"
tokio = { workspace = true }
