[package]
name = "ceresdb-test"
version = "0.1.0"

[package.edition]
workspace = true

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1"
ceresdb-client-rs = { git = "https://github.com/CeresDB/ceresdb-client-rs.git", rev = "69948b9963597ccdb7c73756473393972dfdebd3" }
sql = { workspace = true }
sqlness = { git = "https://github.com/CeresDB/sqlness.git", rev = "e6d602ed7d894ffb806580f17f4a6f1283abbf1f" }
sqlparser = { workspace = true }
tokio = { workspace = true }
