[package]
name = "ceresdb-test"
version = "0.1.0"

[package.edition]
workspace = true

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1"
ceresdb-client = { git = "https://github.com/CeresDB/ceresdb-client-rs.git", rev = "3803d66053164cb7de0d915171b8dac8f037d396" }
local-ip-address = "0.5"
reqwest = { workspace = true }
serde = { workspace = true }
sqlness = "0.4.3"
tokio = { workspace = true }
