[package]
name = "interpreters"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
arrow = { workspace = true }
# In alphabetical order
async-trait = { workspace = true }
catalog = { workspace = true }
common_types = { workspace = true }
common_util = { workspace = true }
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
datafusion-optimizer = { workspace = true }
datafusion-proto = { workspace = true }
df_operator = { workspace = true }
log = { workspace = true }
meta_client = { workspace = true }
query_engine = { workspace = true }
regex = "1"
snafu = { workspace = true }
sql = { workspace = true }
table_engine = { workspace = true }

[dev-dependencies]
analytic_engine = { workspace = true, features = ["test"] }
catalog_impls = { workspace = true }
sql = { workspace = true, features = ["test"] }
tokio = { workspace = true }
