# Copyright 2023 The CeresDB Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "interpreters"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
arrow = { workspace = true }
# In alphabetical order
async-trait = { workspace = true }
catalog = { workspace = true }
codec = { workspace = true }
common_types = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
df_operator = { workspace = true }
generic_error = { workspace = true }
hash_ext = { workspace = true }
log = { workspace = true }
macros = { workspace = true }
meta_client = { workspace = true }
query_engine = { workspace = true }
query_frontend = { workspace = true }
regex = "1"
snafu = { workspace = true }
table_engine = { workspace = true }

[dev-dependencies]
analytic_engine = { workspace = true, features = ["test"] }
catalog_impls = { workspace = true }
query_frontend = { workspace = true, features = ["test"] }
test_util = { workspace = true }
tokio = { workspace = true }
