[package]
name = "meta_client"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
async-trait = { workspace = true }
ceresdbproto = { workspace = true }
common_types = { workspace = true }
common_util = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
table_engine =  { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
url = "2.2"
