[package]
name = "meta_client_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
catalog = { path = "../catalog" }
common_types = { path = "../common_types" }
table_engine = { path = "../table_engine" }
common_util = { path = "../common_util" }
ceresdbproto = { git = "https://github.com/CeresDB/ceresdbproto.git"}
futures = "0.3"
grpcio = { path = "../grpcio" }
log = "0.4"
protobuf = "2.20"
rand = "0.7"
reqwest = "0.11"
serde = "1.0"
serde_derive = "1.0.81"
serde_json = "1.0.60"
snafu = { version ="0.6.10", features = ["backtraces"]}
tokio = { version = "1.0", features = ["full"] }
url = "2.2"
