[package]
name = "partition_table_engine"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
async-trait = { workspace = true }
common_types = { workspace = true }
futures = { workspace = true }
generic_error = { workspace = true }
lazy_static = { workspace = true }
macros = { workspace = true }
prometheus = { workspace = true }
snafu = { workspace = true }
table_engine = { workspace = true }
