[package]
name = "proto"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { workspace = true }

[build-dependencies.protobuf-builder]
git = "https://github.com/CeresDB/protobuf-builder.git"
rev = "745cc8527d1c5eb48745f5ce74b2b5bdb75c3bf2"
