[package]
name = "proto"
[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = { workspace = true }

[build-dependencies]
protoc-bin-vendored = "3.0.0"
tonic-build = "0.8"
