[package]
name = "query_engine"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
# In alphabetical order
arrow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
common_types = { workspace = true }
common_util = { workspace = true }
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
df_operator = { workspace = true }
futures = { workspace = true }
iox_query = { git = "https://github.com/jiacai2050/influxdb_iox", branch = "ceresdb" }
log = { workspace = true }
serde = { workspace = true }
snafu = { workspace = true }
sql = { workspace = true }
table_engine = { workspace = true }
tokio = { workspace = true }
