# Copyright 2023 The CeresDB Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "query_frontend"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[features]
test = []

[dependencies]
# In alphabetical order
arrow = { workspace = true }
async-trait = { workspace = true }
catalog = { workspace = true }
ceresdbproto = { workspace = true }
cluster = { workspace = true }
codec = { workspace = true }
common_types = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
df_operator = { workspace = true }
generic_error = { workspace = true }
hash_ext = { workspace = true }
influxql-logical-planner = { workspace = true }
influxql-parser = { workspace = true }
influxql-schema = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
logger = { workspace = true }
macros = { workspace = true }
partition_table_engine = { workspace = true }
paste = { workspace = true }
prom-remote-api = { workspace = true }
regex = { workspace = true }
regex-syntax = "0.6.28"
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
sqlparser = { workspace = true }
table_engine = { workspace = true }

[dev-dependencies]
common_types = { workspace = true, features = ["test"] }
tokio = { workspace = true }
