[package]
name = "server"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
analytic_engine = { workspace = true }
arrow = { workspace = true }
arrow_ext = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
catalog = { workspace = true }
ceresdbproto = { workspace = true }
cluster = { workspace = true }
common_types = { workspace = true }
common_util = { workspace = true }
datafusion = { workspace = true }
datafusion-expr = { workspace = true }
df_operator = { workspace = true }
futures = { workspace = true }
http = "0.2"
influxdb-line-protocol = "1.0"
interpreters = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
logger = { workspace = true }
clru = { workspace = true }
meta_client = { workspace = true }
opensrv-mysql = "0.1.0"
paste = { workspace = true }
profile = { workspace = true }
prom-remote-api = { version = "0.2.1", features = ["warp"] }
prometheus = { workspace = true }
prometheus-static-metric = { workspace = true }
prost = { workspace = true }
query_engine = { workspace = true }
router = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
spin = { workspace = true }
sql = { workspace = true }
system_catalog = { workspace = true }
table_engine = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { workspace = true }
wal = { workspace = true }
warp = "0.3"
zstd = { workspace = true }

[dev-dependencies]
json_pretty = "0.1.2"
sql = { workspace = true, features = ["test"] }
