[package]
name = "system_catalog"
version = "0.1.0"
authors = ["CeresDB Authors <ceresdbservice@gmail.com>"]

[package.edition]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# In alphabetical order
arrow = { workspace = true }
async-trait = { workspace = true }
catalog = { workspace = true }
common_types = { workspace = true }
common_util = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
proto = { workspace = true }
protobuf = { workspace = true }
snafu = { workspace = true }
table_engine = { workspace = true }
tokio = { workspace = true }
