[package]
name = "system_catalog"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
# In alphabetical order
arrow = { workspace = true }
async-trait = { workspace = true }
bytes_ext = { workspace = true }
catalog = { workspace = true }
ceresdbproto = { workspace = true }
codec = { workspace = true }
common_types = { workspace = true }
futures = { workspace = true }
generic_error = { workspace = true }
log = { workspace = true }
macros = { workspace = true }
prost = { workspace = true }
snafu = { workspace = true }
table_engine = { workspace = true }
tokio = { workspace = true }
trace_metric = { workspace = true }
