[package]
name = "table_engine"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
# In alphabetical order
arrow = { workspace = true }
arrow_ext = { workspace = true }
async-trait = { workspace = true }
ceresdbproto = { workspace = true }
common_types = { workspace = true }
common_util = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
df_operator = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
trace_metric = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
