[package]
name = "table_engine"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[dependencies]
# In alphabetical order
arrow = { workspace = true }
arrow_ext = { workspace = true }
async-trait = { workspace = true }
bytes_ext = { workspace = true }
ceresdbproto = { workspace = true }
common_types = { workspace = true }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
df_operator = { workspace = true }
futures = { workspace = true }
generic_error = { workspace = true }
hash_ext = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
macros = { workspace = true }
prost = { workspace = true }
runtime = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
trace_metric = { workspace = true }
